[package]
edition = "2021"
name = "token"
version = "0.1.0"

[features]
default = []
no_api = []
# crypto = ["secp256k1"] # this does not compile to wasm 

[dependencies]
assert-panic = "1.0"
candid = "0.7"
common = {path = "../common"}
ic-cdk = { version = "0.3", default-features = false }
ic-cdk-macros = "0.3"
ic-kit = { git = "https://github.com/infinity-swap/ic-kit" }
num-traits = "0.2"
serde = "1.0"
serde_cbor = "0.11"
# secp256k1 = { version = "0.20.3", optional = true }
# secp256k1 = "0.20.3"
libsecp256k1 = "0.5.0"
sha2 = "0.10.2"
# getrandom = { version = "0.2", features = ["js"] } # needed for `rand` in `libsecp256k1`

# ic-storage = { git = "https://github.com/infinity-swap/ic-helpers.git", package = "ic-storage" }
# ic-canister = { git = "https://github.com/infinity-swap/ic-helpers.git", package = "ic-canister" }
ic-canister = { path = "../../../ic-helpers/ic-canister/ic-canister" }
ic-helpers = { path = "../../../ic-helpers/ic-helpers" }
ic-storage = { path = "../../../ic-helpers/ic-storage" }
# ic-ic00-types = { git = "https://github.com/dfinity/ic", rev = "d004accc3904e24dddb13a11d93451523e1a8a5f" }
ic-ic00-types = { git = "https://github.com/infinity-swap/ic" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = {version = "1.10.0", features = ["attributes"]}

[dev-dependencies]
test-case = "1.2.1"
tokio = {version = "1", features = ["macros", "rt"]}
